@startuml
top to bottom direction

!theme cocard from .

class Connector  {
  name: string
  short_name: string
  description: rich_text
  ip: inet
  admin_url: string
  sds_url: string
  manual_update: boolean
  id_contract: string
  serial: string
  use_tls: boolean
  authentication: integer
  auth_user: string
  auth_password: string
  --
  sds_xml: text
  sds_updated_at: timestamp
  connector_services: jsonb
  last_check: timestamp
  last_ok: timestamp
  deleted_at: timestamp
  condition: integer
  condition_message: string
  soap_request_success: boolean
  vpnti_online: boolean
  firmware_version: string
  acknowledge_id: bigint
  iccsn: string
  expiration_date: date
  rebooted_at: timestamp
  boot_mode: integer
}

class CardTerminal {
  displayname: string
  description: rich_text
  room: string
  contact: string
  plugged_in: string
  delivery_date: date
  supplier: string
  serial: string
  id_product: string
  pin_mode: integer
  location_id
  ip: inet
  idle_message: string
  --
  properties: jsonb
  name: string
  ct_id: string
  mac: macaddr
  current_ip: inet
  slots: integer
  connected: boolean
  condition_message: string
  condition: integer
  last_ok: timestamp
  last_check: timestamp
  deleted_at: timestamp
  firmware_version: string
  identification: string
  acknowledge_id: bigint
  rebooted_at: timestamp
  uptime_total: integer
  uptime_reboot: integer
  slot1_plug_cycles: integer
  slot2_plug_cycles: integer
  slot3_plug_cycles: integer
  slot4_plug_cycles: integer
  connector_id
  network_id
}

class CardTerminalSlot {
  card_terminal_id: bigint
  slot: integer
}

class Location {
  lid: string
  description: string
}

class Context {
  mandant: string
  client_system: string
  workplace: string
  description: string
}

class ConnectorContext {
  connector_id
  context_id
  position: integer
}

class CardContext {
  card_id
  context_id
  position: integer
  pin_status: string
  left_tries: integer
}

class Card {
  name: string
  description: rich_text
  operational_state_id
  location_id
  lanr: string
  fachrichtung: string
  bsnr: string
  telematikid: string
  private_information: rich_text
  --
  properties: jsonb
  card_handle: string
  card_type: string
  iccsn: string
  slotid: integer
  insert_time: timestamp
  card_holder_name: string
  expiration_date: date
  condition: integer
  condition_message: string
  acknowledge_id: bigint
  last_check: timestamp
  last_ok: timestamp
  deleted_at: timestamp
  object_system_version: string
  card_terminal_slot_id
  --
  certificate: text
  cert_subject_cn: string
  cert_subject_title: string
  cert_subject_sn: string
  cert_subject_givenname: string
  cert_subject_street: string
  cert_subject_postalcode: string
  cert_subject_l: string
  cert_subject_o: string
}

class CardCertificate {
  cert_ref: string
  issuer: text
  serial_number: string
  subject_name: text
  certificate: text
  expiration_date: date
  card_id
}

class Workplace {
  description: string
  --
  name: string
  last_seen: timestamp
}
Class TerminalWorkplaces {
  card_terminal_id
  workplace_id
  mandant: string
  client_system: string
  updated_at
}
Class OperationalState {
  name: string
  description: string
  operational: boolean
}

Class Log {
  loggable: polymorphic
  action: string
  last_seen: timestamp
  since: timestamp
  level: string
  message: text
  is_valid: boolean
  condition: integer
  acknowledge_id: bigint
}

Class Network {
  netzwerk: cidr
  description: rich_text
  accessibility: integer
  location_id
}

Class ClientCertificate {
  name: string
  client_system: string
  description: rich_text
  cert: text
  pkey: text
  passphrase: string
  expiration_date: date
  cn()
}

Class Note {
  notable: polymorphic
  message: rich_text
  valid_until: datetime
  type: integer
  mail_to: string
  subject: string
  with_mail: boolean
  user_id
}

Class Tag {
  name: string
}

Class Tagging {
  tag_id
  taggable: polymorphic
}

class KTProxy {
  uuid: string
  name: string
  wireguard_ip: inet
  incoming_ip: inet
  incoming_port: integer
  outgoing_ip: inet
  outgoing_port: integer
  card_terminal_ip: inet
  card_terminal_port: integer
  card_terminal_id
  ti_client_id
}

Class TIClient {
  name: string
  url: string
  client_secret: string
  connector_id
}

Network "*" - "1" Location
Network "1" -- "*" CardTerminal
Location "*" -- "*" Connector
Context "*" -- "*" Connector
Connector "0..1" - "*" CardTerminal
Location "0..1" -- "*" CardTerminal
(Connector, Context) . ConnectorContext
CardContext . (Card, Context)
CardTerminal "1" - "*" CardTerminalSlot
CardTerminalSlot "1" - "0..1" Card
CardCertificate "*" -- "1" Card
CardTerminal "*" -- "*" Workplace
KTProxy "1" -- "1" CardTerminal 
TerminalWorkplaces . (CardTerminal, Workplace) 
Location "0..1" -- "*" Card
OperationalState "1" -- "*" Card

TIClient "0..1" -- "1" Connector
TIClient "1" - "*" KTProxy

Connector "1" -- "*" Log
CardTerminal "1" -- "*" Log
Card "1" -- "*" Log

Connector "*" -- "*" ClientCertificate

Tag "1" -- "*" Tagging

'Just for Layout
Note -[hidden]- SinglePicture
SinglePicture -[hidden]- Tag

Class SinglePicture {
  time: timestamp
  ci: string
  tid: string
  bu: string
  organization: string
  pdt: string
  product: string
  availability: integer
  comment: string
  name: string
  muted: boolean
}
@enduml
